--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -1,13 +1,19 @@
-name: Greetings
-
-on: [issues, pull_request]
-
 jobs:
   greeting:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
-    - uses: actions/first-interaction@v1
+    - continue-on-error: true
+      uses: actions/first-interaction@v1
       with:
+        issue-message: Hello @${{ github.actor }}, thanks for getting in touch, we
+          will get back to you asap! *If you have issues in the `1.x.x.RELEASE` line
+          we recommend you to update to the latest version, unfortunately this line
+          is not supported anymore.*
+        pr-message: Hello @${{ github.actor }}, thanks for your contribution! Please
+          make sure to link the issue that you are trying to solve and also add tests
+          cases to cover the new code. Thanks!
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Hello @${{ github.actor }}, thanks for getting in touch, we will get back to you asap! *If you have issues in the `1.x.x.RELEASE` line we recommend you to update to the latest version, unfortunately this line is not supported anymore.*'
-        pr-message: 'Hello @${{ github.actor }}, thanks for your contribution! Please make sure to link the issue that you are trying to solve and also add tests cases to cover the new code. Thanks!'
+name: Greetings
+on:
+  repository_dispatch:
+    types: trigger-ga___greetings.yml
