--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,21 +1,21 @@
-name: Mark and close stale issues and pull requests
-
-on:
-  schedule:
-  - cron: "30 1 * * *"
-
 jobs:
   stale:
-
-    runs-on: ubuntu-latest
-
+    runs-on: self-hosted
     steps:
-    - uses: actions/stale@v3
+    - continue-on-error: true
+      uses: actions/stale@v3
       with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        stale-issue-message: 'This issue is stale because it has been open 30 days with no activity. Remove stale label or comment or this will be closed in 1 day'
-        stale-pr-message: 'This issue is stale because it has been open 30 days with no activity. Remove stale label or comment or this will be closed in 1 day'
-        stale-issue-label: 'stale'
-        stale-pr-label: 'stale'
-        days-before-stale: 30
         days-before-close: 1
+        days-before-stale: 30
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        stale-issue-label: stale
+        stale-issue-message: This issue is stale because it has been open 30 days
+          with no activity. Remove stale label or comment or this will be closed in
+          1 day
+        stale-pr-label: stale
+        stale-pr-message: This issue is stale because it has been open 30 days with
+          no activity. Remove stale label or comment or this will be closed in 1 day
+name: Mark and close stale issues and pull requests
+on:
+  repository_dispatch:
+    types: trigger-ga___stale.yml
